[core] Fix line overflow

--- a/styles/cprofile.less
+++ b/styles/cprofile.less
@@ -20,6 +20,7 @@
 
         .text{
             margin-left: 8px;
+            white-space: nowrap;
         }
     }
 
